--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "vue": "^3.0.5"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "@vitejs/plugin-vue": "^1.2.2",
     "@vue/compiler-sfc": "^3.0.5",
+    "@vue/eslint-config-typescript": "^7.0.0",
     "@vuedx/typescript-plugin-vue": "^0.6.3",
+    "eslint": "^7.25.0",
+    "eslint-plugin-vue": "^7.9.0",
     "typescript": "^4.1.3",
     "vite": "^2.2.3",
     "vue-tsc": "^0.0.24"
