--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@typescript-eslint/parser": "^4.22.0",
     "@vitejs/plugin-vue": "^1.2.2",
     "@vue/compiler-sfc": "^3.0.5",
+    "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
     "@vuedx/typescript-plugin-vue": "^0.6.3",
     "eslint": "^7.25.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-vue": "^7.9.0",
+    "prettier": "^2.2.1",
     "typescript": "^4.1.3",
     "vite": "^2.2.3",
     "vue-tsc": "^0.0.24"
