--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
     "@vuedx/typescript-plugin-vue": "^0.6.3",
+    "autoprefixer": "^10.2.5",
     "eslint": "^7.25.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-vue": "^7.9.0",
     "prettier": "^2.2.1",
+    "sass": "^1.32.12",
     "typescript": "^4.1.3",
     "vite": "^2.2.3",
     "vue-tsc": "^0.0.24"
