--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@primer/css": "^16.3.0",
     "vue": "^3.0.5"
   },
   "devDependencies": {
