--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,4 +40,8 @@ jobs:
         with:
           deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
           external_repository: ryoheinan/ryoheinan.github.io
+          publish_branch: main
           publish_dir: ./dist
+          user_name: 'github-actions[bot]'
+          user_email: 'github-actions[bot]@users.noreply.github.com'
+          commit_message: ${{ github.event.head_commit.message }}
