--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "@vue/compiler-sfc": "^3.0.5",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
-    "@vuedx/typescript-plugin-vue": "^0.6.3",
     "autoprefixer": "^10.2.5",
     "eslint": "^7.25.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-vue": "^7.9.0",
+    "postcss": "^8.3.5",
     "prettier": "^2.2.1",
     "sass": "^1.32.12",
     "typescript": "^4.1.3",
