--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -25,9 +25,10 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node }}
+          cache: 'yarn'
 
       - name: Install dependencies 👨🏻‍💻
-        run: yarn
+        run: yarn install
 
       - name: Run linter 👀
         run: yarn lint
