--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,16 +41,16 @@ jobs:
         id: deployment
         with:
           token: "${{ github.token }}"
-          target_url: https://ryohei.dev
           environment: production
 
       - name: Deploy to Netlify
-        uses: netlify/actions/cli@master
-        with:
-          args: deploy --dir=dist --prod
+        run: npx netlify-cli deploy --dir=./dist --prod
+        id: netlify-action
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+      
+      - run: echo ${{ steps.netlify-action.outputs.URL }}
       
       - name: Update deployment status (success)
         if: success()
