--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,7 @@
   "env": {
     "browser": true,
     "es2021": true,
-    "node": true
+    "vue/setup-compiler-macros": true
   },
   "extends": [
     "plugin:vue/vue3-recommended",
