--- a/.eslintrc
+++ b/.eslintrc
@@ -1,20 +1,21 @@
 {
-  "root": true,
   "env": {
     "browser": true,
     "es2021": true,
+    "node": true,
     "vue/setup-compiler-macros": true
   },
   "extends": [
-    "plugin:vue/vue3-recommended",
-    "eslint:recommended",
     "@vue/typescript/recommended",
-    "@vue/prettier",
-    "@vue/prettier/@typescript-eslint"
+    "eslint:recommended",
+    "plugin:vue/vue3-essential",
+    "prettier"
   ],
   "parserOptions": {
     "ecmaVersion": 2021
   },
-  "plugins": [],
-  "rules": {}
+  "plugins": ["vue", "@typescript-eslint"],
+  "rules": {
+    "vue/multi-word-component-names": "off"
+  }
 }
