--- a/package.json
+++ b/package.json
@@ -5,29 +5,26 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview",
-    "lint:fix": "eslint --ext \".js,.vue,.ts\" --ignore-path .gitignore .",
-    "lint": "yarn lint:fix"
+    "lint": "eslint --ext \".js,.vue,.ts\" --ignore-path .gitignore ."
   },
   "dependencies": {
-    "@primer/css": "^18.0.1",
-    "vue": "^3.0.5"
+    "@primer/css": "^18.2.0",
+    "vue": "^3.2.22"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
-    "@vitejs/plugin-vue": "^1.2.2",
-    "@vue/compiler-sfc": "^3.0.5",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "@vitejs/plugin-vue": "^1.9.4",
     "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/eslint-config-typescript": "^7.0.0",
-    "autoprefixer": "^10.2.5",
-    "eslint": "^7.25.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-vue": "^7.9.0",
-    "postcss": "^8.3.5",
+    "@vue/eslint-config-typescript": "^9.1.0",
+    "autoprefixer": "^10.4.0",
+    "eslint": "^8.2.0",
+    "eslint-plugin-vue": "^8.0.3",
+    "postcss": "^8.3.11",
     "prettier": "^2.2.1",
-    "sass": "^1.32.12",
-    "typescript": "^4.1.3",
-    "vite": "^2.2.3",
-    "vue-tsc": "^0.3.0"
+    "sass": "^1.43.4",
+    "typescript": "^4.5.2",
+    "vite": "^2.6.14",
+    "vue-tsc": "^0.29.5"
   }
 }
