--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -2,7 +2,9 @@
   "extends": ["config:base", ":preserveSemverRanges"],
   "timezone": "Asia/Tokyo",
   "labels": ["renovate"],
-  "schedule": "after 10am on the first day of the month",
+  "schedule":[
+    "before 10am on the first day of the month"
+  ],
   "lockFileMaintenance": {
     "enabled": true
   },
