--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,11 @@
   },
   "plugins": ["vue", "@typescript-eslint"],
   "rules": {
-    "vue/multi-word-component-names": "off"
+    "vue/multi-word-component-names": "off",
+    "eqeqeq": ["error", "always"],
+    "no-unused-vars": [
+      "error",
+      { "vars": "all", "args": "after-used", "ignoreRestSiblings": false }
+    ]
   }
 }
