--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mysite",
   "version": "0.0.0",
+  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
@@ -9,13 +10,12 @@
   },
   "dependencies": {
     "@primer/css": "^19.0.0",
-    "vue": "^3.0.5"
+    "vue": "^3.2.26"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vitejs/plugin-vue": "^2.0.0",
-    "@vue/compiler-sfc": "^3.0.5",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^9.0.0",
     "autoprefixer": "^10.2.5",
@@ -26,7 +26,7 @@
     "prettier": "^2.2.1",
     "sass": "^1.32.12",
     "typescript": "^4.1.3",
-    "vite": "^2.2.3",
+    "vite": "^2.7.10",
     "vue-tsc": "^0.30.0"
   }
 }
