--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@primer/css": "^19.0.0",
-    "vue": "^3.2.26"
+    "pinia": "^2.0.9",
+    "vue": "^3.2.26",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.4.0",
