--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "sass": "^1.32.12",
     "typescript": "^4.1.3",
     "vite": "^2.7.10",
+    "vite-plugin-fonts": "^0.2.2",
     "vue-tsc": "^0.30.0"
   }
 }
