--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@primer/css": "^19.0.0",
+    "@vueuse/head": "^0.7.5",
     "pinia": "^2.0.9",
     "vue": "^3.2.26",
     "vue-router": "4"
