--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview",
-    "lint": "eslint --ext \".js,.vue,.ts\" --ignore-path .gitignore ."
+    "lint": "eslint --ext \".js,.vue,.ts\" --ignore-path .gitignore .",
+    "test": "vitest"
   },
   "dependencies": {
     "@primer/css": "^19.0.0",
@@ -21,16 +22,19 @@
     "@vitejs/plugin-vue": "^2.0.0",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^10.0.0",
+    "@vue/test-utils": "^2.0.0-rc.18",
     "autoprefixer": "^10.2.5",
     "eslint": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.1.1",
+    "happy-dom": "^2.46.0",
     "postcss": "^8.3.5",
     "prettier": "^2.2.1",
     "sass": "^1.32.12",
     "typescript": "^4.1.3",
     "vite": "^2.7.10",
     "vite-plugin-webfont-dl": "^1.0.7",
+    "vitest": "^0.6.0",
     "vue-tsc": "^0.32.0"
   }
 }
