--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview",
     "lint": "eslint --ext \".js,.vue,.ts\" --ignore-path .gitignore .",
-    "test": "vitest"
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@primer/css": "^19.0.0",
@@ -24,6 +25,7 @@
     "@vue/eslint-config-typescript": "^10.0.0",
     "@vue/test-utils": "^2.0.0-rc.18",
     "autoprefixer": "^10.2.5",
+    "c8": "^7.11.0",
     "eslint": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.1.1",
