--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "module": "esnext",
     "moduleResolution": "node",
     "strict": true,
+    "skipLibCheck": true, // temporary change
     "jsx": "preserve",
     "sourceMap": true,
     "resolveJsonModule": true,
