--- a/package.json
+++ b/package.json
@@ -9,28 +9,29 @@
     "lint": "eslint --ext \".js,.vue,.ts\" --ignore-path .gitignore ."
   },
   "dependencies": {
-    "@primer/css": "^19.0.0",
-    "@vueuse/head": "^0.7.5",
+    "@primer/css": "^19.8.2",
+    "@vueuse/head": "^0.7.6",
     "pinia": "^2.0.9",
-    "vue": "^3.2.26",
+    "vue": "^3.2.33",
     "vue-router": "4"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
+    "@babel/types": "^7.17.0",
+    "@typescript-eslint/eslint-plugin": "^5.19.0",
+    "@typescript-eslint/parser": "^5.19.0",
     "@vitejs/plugin-vue": "^2.0.0",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^10.0.0",
     "autoprefixer": "^10.2.5",
-    "eslint": "^8.3.0",
+    "eslint": "^8.13.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^8.1.1",
+    "eslint-plugin-vue": "^8.6.0",
     "postcss": "^8.3.5",
-    "prettier": "^2.2.1",
-    "sass": "^1.32.12",
+    "prettier": "^2.6.2",
+    "sass": "^1.50.0",
     "typescript": "^4.1.3",
-    "vite": "^2.7.10",
-    "vite-plugin-webfont-dl": "^1.0.7",
-    "vue-tsc": "^0.32.0"
+    "vite": "^2.9.5",
+    "vite-plugin-webfont-dl": "^2.0.0",
+    "vue-tsc": "^0.34.6"
   }
 }
