--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "rimraf dist && vue-tsc --noEmit && vite build",
     "serve": "vite preview",
     "lint": "eslint --ext \".js,.vue,.ts\" --ignore-path .gitignore ."
   },
@@ -12,11 +12,13 @@
     "@primer/css": "^19.8.2",
     "@vueuse/head": "^0.7.6",
     "pinia": "^2.0.9",
+    "rimraf": "^3.0.2",
     "vue": "^3.2.33",
     "vue-router": "4"
   },
   "devDependencies": {
     "@babel/types": "^7.17.0",
+    "@types/node": "^17.0.24",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
     "@typescript-eslint/parser": "^5.19.0",
     "@vitejs/plugin-vue": "^2.0.0",
@@ -31,6 +33,7 @@
     "sass": "^1.50.0",
     "typescript": "^4.1.3",
     "vite": "^2.9.5",
+    "vite-plugin-html": "^3.2.0",
     "vite-plugin-webfont-dl": "^2.0.0",
     "vue-tsc": "^0.34.6"
   }
