--- a/package.json
+++ b/package.json
@@ -20,18 +20,16 @@
   },
   "devDependencies": {
     "@babel/types": "^7.17.0",
-    "@types/node": "^17.0.24",
-    "@typescript-eslint/eslint-plugin": "^5.19.0",
-    "@typescript-eslint/parser": "^5.19.0",
+    "@rushstack/eslint-patch": "^1.1.4",
+    "@types/node": "16",
     "@vitejs/plugin-vue": "^2.0.0",
     "@vue/eslint-config-prettier": "^7.0.0",
-    "@vue/eslint-config-typescript": "^10.0.0",
+    "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/test-utils": "^2.0.0",
     "autoprefixer": "^10.2.5",
     "c8": "^7.11.0",
     "eslint": "^8.13.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^8.6.0",
+    "eslint-plugin-vue": "^9.1.1",
     "happy-dom": "^3.0.0",
     "postcss": "^8.3.5",
     "prettier": "^2.6.2",
