ci: Add Cloudflare deployment

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,3 +35,15 @@ jobs:
 
       - name: Run Test 🔍
         run: yarn test
+ 
+      - name: Build 🧱
+        run: yarn build
+      
+      - name: Publish to Cloudflare Pages
+        uses: cloudflare/pages-action@v1
+        with:
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          projectName: 'mysite'
+          directory: 'dist'
+          gitHubToken: ${{ secrets.GITHUB_TOKEN }}
